--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "If you've tried playing Among Us with your friends, you probably know how frustrating it is - everyone in your group is spamming the \"Create Game\" button, and it's just not working, and when you finally do get a room, no one can connect, they just keep typing in the code over and over and over again and it doesn't want to work...",
   "dependencies": {
     "@types/node": "^14.14.6",
+    "pkg": "^4.4.9",
     "typescript": "^4.0.5"
   },
   "devDependencies": {},
